--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -141,7 +141,7 @@ platform_definition:
       version: 2.0.2.RELEASE
       modules:
         - spring-data-envers
-    - name: Spring Data Gemfire
+    - name: Spring Data GemFire
       groupId: org.springframework.data
       version: 2.0.2.RELEASE
       modules:
@@ -433,7 +433,6 @@ platform_definition:
       'org.springframework.data:spring-data-commons':
          - 'org.scala-lang:scala-library'
       'org.springframework.data:spring-data-gemfire':
-         - 'org.springframework.shell:spring-shell'
          - 'org.iq80.snappy:snappy'
       'org.springframework.data:spring-data-rest-webmvc':
          - 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate4'
@@ -459,6 +458,14 @@ platform_definition:
       # that both it and the rest of the Platform do not depend upon directly
       - 'ch.qos.logback:logback-access'
       - 'ch.qos.logback:logback-core'
+      - 'io.pivotal.gemfire:geode-common'
+      - 'io.pivotal.gemfire:geode-json'
+      - 'io.pivotal.gemfire:geode-junit'
+      - 'io.pivotal.gemfire:geode-old-client-support'
+      - 'io.pivotal.gemfire:geode-pulse'
+      - 'io.pivotal.gemfire:geode-rebalancer'
+      - 'io.pivotal.gemfire:geode-web'
+      - 'io.pivotal.gemfire:geode-web-api'
       - 'com.datastax.cassandra:cassandra-driver-mapping'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-avro'
       - 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
