--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -9,7 +9,7 @@ platform_definition:
         - aspectjrt
     - name: Reactor
       groupId: io.projectreactor
-      version: 3.1.3.BUILD-SNAPSHOT
+      version: 3.1.4.BUILD-SNAPSHOT
       modules:
         - reactor-core
     - name: Spring AMQP
@@ -46,6 +46,7 @@ platform_definition:
         - spring-boot-actuator-docs
         - spring-boot-autoconfigure
         - spring-boot-cli
+        - spring-boot-configuration-analyzer
         - spring-boot-configuration-metadata
         - spring-boot-configuration-processor
         - spring-boot-dependencies
@@ -118,76 +119,76 @@ platform_definition:
         checkout: 2.x
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 2.0.2.RELEASE
+      version: 2.0.3.BUILD-SNAPSHOT
       modules:
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 2.0.2.RELEASE
+      version: 2.0.3.BUILD-SNAPSHOT
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 3.0.2.RELEASE
+      version: 3.0.3.BUILD-SNAPSHOT
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 3.0.2.RELEASE
+      version: 3.0.3.BUILD-SNAPSHOT
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 2.0.2.RELEASE
+      version: 2.0.3.BUILD-SNAPSHOT
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 2.0.2.RELEASE
+      version: 2.0.3.BUILD-SNAPSHOT
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 2.0.2.RELEASE
+      version: 2.0.3.BUILD-SNAPSHOT
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 2.0.2.RELEASE
+      version: 2.0.3.BUILD-SNAPSHOT
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 2.0.2.RELEASE
+      version: 2.0.3.BUILD-SNAPSHOT
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 2.0.2.RELEASE
+      version: 2.0.3.BUILD-SNAPSHOT
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-cross-store
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 5.0.2.RELEASE
+      version: 5.0.3.BUILD-SNAPSHOT
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 2.0.2.RELEASE
+      version: 2.0.3.BUILD-SNAPSHOT
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 3.0.2.RELEASE
+      version: 3.0.3.BUILD-SNAPSHOT
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 3.0.2.RELEASE
+      version: 3.0.3.BUILD-SNAPSHOT
       modules:
         - spring-data-solr
     - name: Spring Framework
@@ -286,7 +287,7 @@ platform_definition:
         - spring-integration-splunk
     - name: Spring Kafka
       groupId: org.springframework.kafka
-      version: 2.1.1.BUILD-SNAPSHOT
+      version: 2.1.1.RELEASE
       modules:
         - spring-kafka
         - spring-kafka-test
@@ -754,6 +755,8 @@ platform_definition:
       - 'org.javassist:javassist'
       - 'org.jboss.logging:jboss-logging'
       - 'org.jetbrains.kotlin:kotlin-runtime'
+      - 'org.jetbrains.kotlin:kotlin-stdlib-jdk7'
+      - 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
       - 'org.jetbrains.kotlin:kotlin-stdlib-jre7'
       - 'org.jetbrains.kotlin:kotlin-stdlib-jre8'
       - 'org.jooq:jooq-codegen'
@@ -794,10 +797,15 @@ platform_definition:
       - 'xml-apis:xml-apis'
   downgraded_dependencies:
     'com.fasterxml.jackson.core:jackson-annotations': '2.9.3'
+    'com.fasterxml.jackson.core:jackson-core': '2.9.3'
     'com.fasterxml.jackson.core:jackson-databind': '2.9.3'
     'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor': '2.9.3'
     'com.fasterxml.jackson.dataformat:jackson-dataformat-smile': '2.9.3'
     'com.fasterxml.jackson.dataformat:jackson-dataformat-xml': '2.9.3'
+    'com.fasterxml.jackson.datatype:jackson-datatype-jdk8': '2.9.3'
+    'com.fasterxml.jackson.datatype:jackson-datatype-hibernate4': '2.9.3'
+    'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5': '2.9.3'
+    'com.fasterxml.jackson.datatype:jackson-datatype-joda': '2.9.3'
     'io.projectreactor:reactor-core': '3.1.2.BUILD-SNAPSHOT'
     'org.aspectj:aspectjweaver': '1.9.0.BETA-7'
     'org.eclipse.persistence:org.eclipse.persistence.jpa': '2.7.0-RC3'
