--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -434,6 +434,7 @@ platform_definition:
       'org.springframework.data:spring-data-commons':
          - 'org.scala-lang:scala-library'
       'org.springframework.data:spring-data-gemfire':
+         - 'edu.umd.cs.mtc:multithreadedtc'
          - 'org.springframework.shell:spring-shell'
          - 'org.iq80.snappy:snappy'
       'org.springframework.data:spring-data-rest-webmvc':
