--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -138,53 +138,53 @@ platform_definition:
         repository: https://github.com/spring-cloud/spring-cloud-connectors
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 1.5.10.BUILD-SNAPSHOT
+      version: 1.5.10.RELEASE
       modules:
         - spring-cql
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 1.13.10.BUILD-SNAPSHOT
+      version: 1.13.10.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 2.2.10.BUILD-SNAPSHOT
+      version: 2.2.10.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 2.1.10.BUILD-SNAPSHOT
+      version: 2.1.10.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 1.1.10.BUILD-SNAPSHOT
+      version: 1.1.10.RELEASE
       modules:
         - spring-data-envers
     - name: Spring Data Gemfire
       groupId: org.springframework.data
-      version: 1.9.10.BUILD-SNAPSHOT
+      version: 1.9.10.RELEASE
       modules:
         - spring-data-gemfire
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 1.11.10.BUILD-SNAPSHOT
+      version: 1.11.10.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 1.2.10.BUILD-SNAPSHOT
+      version: 1.2.10.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 1.0.10.BUILD-SNAPSHOT
+      version: 1.0.10.RELEASE
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 1.10.10.BUILD-SNAPSHOT
+      version: 1.10.10.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-log4j
@@ -192,24 +192,24 @@ platform_definition:
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 4.2.10.BUILD-SNAPSHOT
+      version: 4.2.10.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 1.8.10.BUILD-SNAPSHOT
+      version: 1.8.10.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 2.6.10.BUILD-SNAPSHOT
+      version: 2.6.10.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 2.1.10.BUILD-SNAPSHOT
+      version: 2.1.10.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
