Start building against Spring Boot 1.5.11 snaphots
See gh-721

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -61,7 +61,7 @@ platform_definition:
           - jdk8
     - name: Spring Boot
       groupId: org.springframework.boot
-      version: 1.5.10.RELEASE
+      version: 1.5.11.BUILD-SNAPSHOT
       modules:
         - spring-boot
         - spring-boot-actuator
