--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -228,7 +228,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 5.0.1.RELEASE
+      version: 5.0.2.BUILD-SNAPSHOT
       build:
         compileWith: jdk8
         runTestsWith:
@@ -540,7 +540,6 @@ platform_definition:
       - 'io.dropwizard.metrics:metrics-servlet'
       - 'io.dropwizard.metrics:metrics-servlets'
       - 'io.javaslang:javaslang-match'
-      - 'io.micrometer:micrometer-registry-new-relic'
       - 'io.netty:netty-codec'
       - 'io.netty:netty-codec-dns'
       - 'io.netty:netty-codec-haproxy'
