--- a/platform-bom/pom.xml
+++ b/platform-bom/pom.xml
@@ -52,7 +52,7 @@
 		<spring-security-oauth.version>2.2.1.RELEASE</spring-security-oauth.version>
 		<spring-social.version>1.1.5.BUILD-SNAPSHOT</spring-social.version>
 		<spring-social-twitter.version>1.1.2.RELEASE</spring-social-twitter.version>
-		<spring-web-flow.version>2.5.0.BUILD-SNAPSHOT</spring-web-flow.version>
+		<spring-web-flow.version>2.5.0.RC1</spring-web-flow.version>
 		<spring-web-services.version>${spring-ws.version}</spring-web-services.version>
 
 		<aalto-xml.version>1.0.0</aalto-xml.version>
