--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -408,9 +408,8 @@ platform_definition:
         - spring-social-twitter
     - name: Spring Web Flow
       groupId: org.springframework.webflow
-      version: 2.5.0.BUILD-SNAPSHOT
+      version: 2.5.0.RC1
       build:
-        checkout: 2.5.x
         repository: https://github.com/spring-projects/spring-webflow
       modules:
         - spring-binding
