--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -339,7 +339,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 5.0.2.BUILD-SNAPSHOT
+      version: 5.0.1.RELEASE
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
