--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -391,7 +391,7 @@ platform_definition:
         - spring-session-data-mongodb
     - name: Spring Social
       groupId: org.springframework.social
-      version: 1.1.5.BUILD-SNAPSHOT
+      version: 1.1.5.RELEASE
       build:
         repository: https://github.com/spring-projects/spring-social
       modules:
