--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -9,7 +9,7 @@ platform_definition:
         - aspectjrt
     - name: Reactor
       groupId: io.projectreactor
-      version: 3.1.3.RELEASE
+      version: 3.1.4.RELEASE
       modules:
         - reactor-core
     - name: Spring AMQP
@@ -119,86 +119,86 @@ platform_definition:
         checkout: 2.x
     - name: Spring Data Cassandra
       groupId: org.springframework.data
-      version: 2.0.4.BUILD-SNAPSHOT
+      version: 2.0.4.RELEASE
       modules:
         - spring-data-cassandra
     - name: Spring Data Commons
       groupId: org.springframework.data
-      version: 2.0.4.BUILD-SNAPSHOT
+      version: 2.0.4.RELEASE
       modules:
         - spring-data-commons
     - name: Spring Data Couchbase
       groupId: org.springframework.data
-      version: 3.0.4.BUILD-SNAPSHOT
+      version: 3.0.4.RELEASE
       modules:
         - spring-data-couchbase
     - name: Spring Data Elasticsearch
       groupId: org.springframework.data
-      version: 3.0.4.BUILD-SNAPSHOT
+      version: 3.0.4.RELEASE
       modules:
         - spring-data-elasticsearch
     - name: Spring Data Envers
       groupId: org.springframework.data
-      version: 2.0.4.BUILD-SNAPSHOT
+      version: 2.0.4.RELEASE
       modules:
         - spring-data-envers
     - name: Spring Data GemFire
       groupId: org.springframework.data
-      version: 2.0.4.BUILD-SNAPSHOT
+      version: 2.0.4.RELEASE
       modules:
         - spring-data-gemfire
     - name: Spring Data Geode
       groupId: org.springframework.data
-      version: 2.0.4.BUILD-SNAPSHOT
+      version: 2.0.4.RELEASE
       modules:
         - spring-data-geode
     - name: Spring Data JPA
       groupId: org.springframework.data
-      version: 2.0.4.BUILD-SNAPSHOT
+      version: 2.0.4.RELEASE
       modules:
         - spring-data-jpa
     - name: Spring Data Key Value
       groupId: org.springframework.data
-      version: 2.0.4.BUILD-SNAPSHOT
+      version: 2.0.4.RELEASE
       modules:
         - spring-data-keyvalue
     - name: Spring Data LDAP
       groupId: org.springframework.data
-      version: 2.0.4.BUILD-SNAPSHOT
+      version: 2.0.4.RELEASE
       modules:
         - spring-data-ldap
     - name: Spring Data MongoDB
       groupId: org.springframework.data
-      version: 2.0.4.BUILD-SNAPSHOT
+      version: 2.0.4.RELEASE
       modules:
         - spring-data-mongodb
         - spring-data-mongodb-cross-store
     - name: Spring Data Neo4j
       id: spring.data.neo4j
       groupId: org.springframework.data
-      version: 5.0.4.BUILD-SNAPSHOT
+      version: 5.0.4.RELEASE
       modules:
         - spring-data-neo4j
     - name: Spring Data Redis
       groupId: org.springframework.data
-      version: 2.0.4.BUILD-SNAPSHOT
+      version: 2.0.4.RELEASE
       modules:
         - spring-data-redis
     - name: Spring Data Rest
       groupId: org.springframework.data
-      version: 3.0.4.BUILD-SNAPSHOT
+      version: 3.0.4.RELEASE
       modules:
         - spring-data-rest-core
         - spring-data-rest-hal-browser
         - spring-data-rest-webmvc
     - name: Spring Data Solr
       groupId: org.springframework.data
-      version: 3.0.4.BUILD-SNAPSHOT
+      version: 3.0.4.RELEASE
       modules:
         - spring-data-solr
     - name: Spring Framework
       groupId: org.springframework
-      version: 5.0.4.BUILD-SNAPSHOT
+      version: 5.0.4.RELEASE
       modules:
         - spring-aop
         - spring-aspects
@@ -339,7 +339,7 @@ platform_definition:
         - spring-retry
     - name: Spring Security
       groupId: org.springframework.security
-      version: 5.0.1.RELEASE
+      version: 5.0.2.RELEASE
       build:
         compileWith: jdk8
         repository: https://github.com/spring-projects/spring-security
@@ -628,6 +628,10 @@ platform_definition:
       - 'org.apache.geode:geode-rebalancer'
       - 'org.apache.geode:geode-web'
       - 'org.apache.geode:geode-web-api'
+      - 'org.apache.httpcomponents:fluent-hc'
+      - 'org.apache.httpcomponents:httpclient-cache'
+      - 'org.apache.httpcomponents:httpclient-osgi'
+      - 'org.apache.httpcomponents:httpclient-win'
       - 'org.apache.httpcomponents:httpcore'
       - 'org.apache.httpcomponents:httpcore-nio'
       - 'org.apache.johnzon:johnzon-jsonb'
