--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -417,6 +417,7 @@ platform_definition:
       groupId: org.springframework.social
       version: 1.1.5.RELEASE
       build:
+        compileWith: jdk8
         repository: https://github.com/spring-projects/spring-social
       modules:
         - spring-social-config
