--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -228,7 +228,7 @@ platform_definition:
         - spring-hateoas
     - name: Spring Integration
       groupId: org.springframework.integration
-      version: 5.0.2.BUILD-SNAPSHOT
+      version: 5.0.2.RELEASE
       build:
         compileWith: jdk8
         runTestsWith:
