--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -766,6 +766,7 @@ platform_definition:
       - 'org.glassfish.jersey.media:jersey-media-jaxb'
       - 'org.glassfish.jersey.media:jersey-media-multipart'
       - 'org.hdrhistogram:HdrHistogram'
+      - 'org.hibernate.validator:hibernate-validator-annotation-processor'
       - 'org.hibernate:hibernate-c3p0'
       - 'org.hibernate:hibernate-ehcache'
       - 'org.hibernate:hibernate-hikaricp'
@@ -776,7 +777,6 @@ platform_definition:
       - 'org.hibernate:hibernate-proxool'
       - 'org.hibernate:hibernate-spatial'
       - 'org.hibernate:hibernate-testing'
-      - 'org.hibernate:hibernate-validator-annotation-processor'
       - 'org.igniterealtime.smack:smack-resolver-javax'
       - 'org.infinispan:infinispan-spring4-common'
       - 'org.javassist:javassist'
