--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -407,7 +407,7 @@ platform_definition:
         - spring-social-twitter
     - name: Spring Web Flow
       groupId: org.springframework.webflow
-      version: 2.5.0.RC1
+      version: 2.5.0.RELEASE
       build:
         repository: https://github.com/spring-projects/spring-webflow
       modules:
