Align with latest Spring Boot 1.5.11 snapshots

--- a/platform-definition.yaml
+++ b/platform-definition.yaml
@@ -41,6 +41,8 @@ platform_definition:
       modules:
         - spring-amqp
         - spring-rabbit
+        - spring-rabbit-junit
+        - spring-rabbit-test
       build:
         repository: https://github.com/spring-projects/spring-amqp
         compileWith: jdk8
